--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -312,6 +312,7 @@ border-radius: 0.9em;
 
 .image_border {
 border-radius: 1.6em;
+margin: 2em;
 }
 
 
@@ -1201,7 +1202,6 @@ border-radius: 0px !important;
 #alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, .hidden {
 display: none;
 }
-
 
 
 
