--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -243,7 +243,7 @@ overflow-x: hidden !important; /* Hide horizontal scrollbar */
 
 
 .random_tip a {
-color: #dd7c0d !important;
+color: #F7931A !important;
 text-decoration-style: dotted;
 }
 
@@ -458,18 +458,34 @@ color: #ffb83f !important;
 
 
 .bitcoin, .btc, #sidebar ul.list-unstyled li a.bitcoin:link {
-color: #dd7c0d !important;
+color: #F7931A !important;
 }
 
 
 .bitcoin_dotted {
 padding: 1.1em;
-border: 0.4em dotted #dd7c0d !important;
+border: 0.4em dotted #F7931A !important;
+}
+
+
+.btc {
+  background: -webkit-linear-gradient(#f27e02, #edb678);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 
 .eth {
-color: #939cbc !important;
+  background: -webkit-linear-gradient(#4c4b4b, #9e9c9c);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.sol {
+  background: -webkit-linear-gradient(#16E9AC, #CF2CFA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 
@@ -567,7 +583,7 @@ width: 100%;
 font-weight: bold;
 background-color: #5b5b5b;
 opacity: 0.75;
-border: 0.2em dotted #dd7c0d;
+border: 0.2em dotted #F7931A;
 border-radius: 30px;
 padding: 5px;
 margin: auto;
@@ -731,7 +747,7 @@ border: 0.1em solid #808080 !important;
 
 
 #pm_link_icon_div {
-background: #dd7c0d;
+background: #F7931A;
 }
 
 
@@ -827,7 +843,7 @@ padding-top: 0px;
 padding-bottom: 1.3em;
 padding-left: 1.9em;
 padding-right: 1.9em;
-border: 0.2em solid #dd7c0d; 
+border: 0.2em solid #F7931A; 
 }
 
 
@@ -882,7 +898,7 @@ line-height: 3.6em;
 white-space: normal;
 word-wrap: break-word;
 background: #ededa6 !important;
-border: 0.3em solid #dd7c0d !important; 
+border: 0.3em solid #F7931A !important; 
 border-radius: 0.7em;
 color: #ff4747;
 }
@@ -1199,7 +1215,7 @@ border-radius: 0px !important;
 }
 
 
-#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, .hidden {
+#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, .show_2fa_verification, .hidden {
 display: none;
 }
 
