--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -643,9 +643,9 @@ min-width: 1150px !important;
 .admin_login_alerts {
 display: inline-block;
 font-weight: bold;
-padding: 15px;
-margin: 1.6em;
-font-size: 2.2em; 
+padding: 0.4em;
+margin: 0.4em;
+font-size: 1.5em; 
 }
 
 
