--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -717,6 +717,101 @@ margin-top: 1.1em !important;
 }
 
 
+/* https://css.gg/eye */
+.gg-eye {
+    position: relative;
+    display: block;
+    width: 24px;
+    height: 18px;
+    border-bottom-right-radius: 100px;
+    border-bottom-left-radius: 100px;
+    overflow: hidden;
+    box-sizing: border-box
+}
+.gg-eye::after,
+.gg-eye::before {
+    content: "";
+    display: block;
+    border-radius: 100px;
+    position: absolute;
+    box-sizing: border-box
+}
+.gg-eye::after {
+    top: 2px;
+    box-shadow:
+        inset 0 -8px 0 2px,
+        inset 0 0 0 2px;
+    width: 24px;
+    height: 24px
+}
+.gg-eye::before {
+    width: 8px;
+    height: 8px;
+    border: 2px solid;
+    bottom: 4px;
+    left: 8px
+}
+
+
+/* https://css.gg/eye-alt */
+.gg-eye-alt {
+    position: relative;
+    display: block;
+    width: 24px;
+    height: 18px;
+    border-bottom-right-radius: 100px;
+    border-bottom-left-radius: 100px;
+    overflow: hidden;
+    box-sizing: border-box
+}
+.gg-eye-alt::after,
+.gg-eye-alt::before {
+    content: "";
+    display: block;
+    border-radius: 100px;
+    position: absolute;
+    box-sizing: border-box
+}
+.gg-eye-alt::after {
+    top: 2px;
+    box-shadow:
+        inset 0 -8px 0 2px,
+        inset 0 0 0 2px;
+    width: 24px;
+    height: 24px
+}
+.gg-eye-alt::before {
+    width: 8px;
+    height: 8px;
+    border: 2px solid transparent;
+    box-shadow:
+        inset 0 0 0 6px,
+        0 0 0 4px,
+        6px 0 0 0,
+        -6px 0 0 0 ;
+    bottom: 4px;
+    left: 8px
+}
+
+
+i.gg-eye, i.gg-eye-alt {
+  position: absolute;
+  cursor: pointer;
+  color: black;
+}
+
+
+.password-container{
+  width: fit-content;
+  position: relative;
+  display: inline-block;
+}
+.password-container input[type="password"],
+.password-container input[type="text"]{
+padding-right: 1.0em;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
