fixes, better firefox support, revised TODO
fixes, better firefox support, revised TODO

--- a/templates/interface/css/admin.css
+++ b/templates/interface/css/admin.css
@@ -19,7 +19,9 @@ CLASSES
 overflow: hidden;
 width: 100%; 
 position: relative;
-padding-top: 30px;
+padding: 0px;
+margin: 0px;
+margin-top: 2em;
 }
 
 
