--- a/templates/interface/css/light.style.css
+++ b/templates/interface/css/light.style.css
@@ -56,6 +56,11 @@ input[type=text]:disabled {
 }
 
 
+::placeholder { /* Most modern browsers support this now. */
+   color: black;
+}
+
+
 a, .black, td.data span, .subsection_legend, .crypto_worth, .crypto_worth span, td.data div.crypto_worth span {
 color: black;
 }
@@ -177,6 +182,12 @@ color: #066000 !important;
 .green_dotted {
 padding: 10px;
 border: 0.4em dotted #066000 !important;
+}
+
+
+.blue_dotted {
+padding: 10px;
+border: 0.4em dotted #1a1696 !important;
 }
 
 
