refactoring, privacy UX, notes, dev UX
refactoring, privacy UX, notes, dev UX

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -813,6 +813,11 @@ i.gg-eye, i.gg-eye-alt {
 }
 
 
+.textarea_password {
+-webkit-text-security : circle;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
