--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -668,7 +668,8 @@ margin-left: 0px;
 
 .pretty_text_fields p {
 white-space: nowrap;
-margin-bottom: 3.0em;
+margin-top: 1.0em;
+margin-bottom: 2.0em;
 }
 
 
