dev / user experience improvements
dev / user experience improvements

--- a/templates/interface/css/admin.css
+++ b/templates/interface/css/admin.css
@@ -80,6 +80,12 @@ IDs
 ////////////////////////////// */
 
 
+#sidebar .admin_settings_save.red_bright {
+border-radius: 8px;
+border: 3px dotted #ff4747;
+}
+
+
 #admin_tabs li a {
 	position: relative;
 	left: 2px;
